# crimson-rs

./: .gitignore  Cargo.toml  Claude.MD  LICENSE  README.MD  pyproject.toml
.claude/: settings.json
.github/workflows/: build.yml
docs/: api.md  archive-format.md
examples/: pack_mod_example.py  roundtrip_test.py  scan_game_archives.py  smoke_tracked.py
python/crimson_rs/: __init__.py  __init__.pyi  create_pack.py  enums.py  pack_mod.py  validate_game_dir.py
references/: INFO.MD  item_info.hexpat  item_info.py  store_info.hexpat
src/: json_traits.rs  lib.rs  main.rs  python.rs  python_traits.rs
src/binary/: arrays.rs  mod.rs  paloc.rs  pamt.rs  papgt.rs  paz.rs  primitives.rs  trie.rs  types.rs
src/crypto/: chacha20.rs  checksum.rs  mod.rs
src/item_info/: item.rs  keys.rs  mod.rs  structs.rs
