[package]
name = "crimson-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "crimson_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["abi3-py312"] }
chacha20_crate = { package = "chacha20", version = "0.10.0" }
lz4_flex = "0.11"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3"
